--- a/src/index.html
+++ b/src/index.html
@@ -2,28 +2,9 @@
 <html lang="en">
 <head>
   <base href="/">
-  <meta charset="UTF-8">
+ <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!--     "WCAG2AAA.Principle1.Guideline1_4.1_4_10.C32,C31,C33,C38,SCR34,G206" -->
-    <meta content="width=device-width, initial-scale=1 maxiumun-scale=1" name="viewport"/>
-
-    <!-- "WCAG2AAA.Principle1.Guideline1_4.1_4_4_G142" -->
-        <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-        <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"/>
-        <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-
-    <!-- "WCAG2AAA.Principle2.Guideline2_4.2_4_8.H59.2a " -->
-    <link href="http://schema.org/ItemListOrderDescending" property="itemListOrder"/>
-    <link href="https://www.montecarlosbm.com" itemprop="url"/>
-
-    <!-- "WCAG2AAA.Principle2.Guideline2_4.2_4_8.H59.2b" -->
-    <link rel="image_src" type="/media-relations/press-releases/current/multimedia/200W.jpg"/>
-
-    <!-- "WCAG2AAA.Principle2.Guideline2_4.2_4_8.H59.1" -->
-    <link href="/etc/designs/abbott/components/redesignedcomponents/heroPanel.min.d9007d8f4b3732db75f8b37120d56c1b.css" rel="stylesheet" type="text/css"/>
-    <link href="/etc/designs/abbott/components/hubcomponents/stories.min.61b7dc37cb321e77d82512ae64c3dea7.css" rel="stylesheet" type="text/css"/>
-    
     <title>wally-test-site</title>
     <style>
         * {
@@ -35,10 +16,9 @@
              padding: 5px;
         }
     </style>
-    <script src="https://wally-cdn.s3.us-east-2.amazonaws.com/wally-0.0.1.js"></script>
-  
+    <script src="https://wally-cdn.s3.us-east-2.amazonaws.com/wally-0.0.1.js"></script><script src="https://wally-dev0-cdn.wallyax.com?ref=https://development.d74wyw0luynlo.amplifyapp.com/&amp;token=undefined" type="text/javascript" id="wallyScript"></script>
 </head>
-<body>
+<body lang="en">
   <app-root></app-root>
 </body>
 </html>
