--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html>
 <head>
   <base href="/">
  <meta charset="UTF-8">
@@ -18,7 +18,7 @@
     </style>
     <script src="https://wally-cdn.s3.us-east-2.amazonaws.com/wally-0.0.1.js"></script><script src="https://wally-dev0-cdn.wallyax.com?ref=https://development.d74wyw0luynlo.amplifyapp.com/&amp;token=undefined" type="text/javascript" id="wallyScript"></script>
 </head>
-<body lang="en">
+<body>
   <app-root></app-root>
 </body>
 </html>
