--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
              padding: 5px;
         }
     </style>
-    <!-- <script src="https://wally-cdn.s3.us-east-2.amazonaws.com/wally-0.0.1.js"></script> -->
+    <script src="https://wally-cdn.s3.us-east-2.amazonaws.com/wally-0.0.1.js"></script>
 </head>
 <body>
   <app-root></app-root>
